--- a/pom.xml
+++ b/pom.xml
@@ -155,30 +155,6 @@
             <encoding>UTF-8</encoding>
           </configuration>
         </plugin>
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.codehaus.gmaven</groupId>
-                    <artifactId>gmaven-plugin</artifactId>
-                    <versionRange>[1.0.0,)</versionRange>
-                    <goals>
-                      <goal>testCompile</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore />
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -197,51 +173,84 @@
           <mavenExecutorId>forked-path</mavenExecutorId>
         </configuration>
       </plugin>
+
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.8.1</version>
+        <configuration>
+          <aggregate>true</aggregate>
+          <links>
+            <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
+          </links>
+          <groups>
+            <group>
+              <title>Loggly Extension</title>
+              <packages>ch.qos.logback.ext.loggly:ch.qos.logback.ext.loggly.*</packages>
+            </group>
+            <group>
+              <title>Spring Extension</title>
+              <packages>ch.qos.logback.ext.spring:ch.qos.logback.ext.spring.*</packages>
+            </group>
+          </groups>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.6</version>
+        <executions>
+          <execution>
+            <phase>test</phase>
+            <goals>
+              <goal>resources</goal>
+              <goal>testResources</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.7</version>
+      </plugin>
     </plugins>
   </build>
 
   <profiles>
-
     <profile>
-      <id>debug</id>
+      <id>testSkip</id>
       <properties>
-        <maven.compiler.debug>true</maven.compiler.debug>
-        <maven.compiler.debuglevel>lines,vars,source</maven.compiler.debuglevel>
+        <maven.test.skip>true</maven.test.skip>
       </properties>
     </profile>
 
     <profile>
-      <id>release</id>
+      <id>license</id>
       <build>
         <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.9.1</version>
-            <executions>
-              <execution>
-                <id>attach-api-docs</id>
-                <goals>
-                  <!--suppress MavenModelInspection -->
-                  <goal>jar</goal>
-                </goals>
-              </execution>
-            </executions>
-            <inherited>true</inherited>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-source-plugin</artifactId>
-            <version>2.2.1</version>
-            <executions>
-              <execution>
-                <id>attach-sources</id>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-              </execution>
-            </executions>
-            <inherited>true</inherited>
+            <groupId>com.mycila.maven-license-plugin</groupId>
+            <artifactId>maven-license-plugin</artifactId>
+            <version>1.9.0</version>
+            <configuration>
+              <header>src/main/licenseHeader.txt</header>
+              <quiet>false</quiet>
+              <failIfMissing>true</failIfMissing>
+              <aggregate>true</aggregate>
+              <includes>
+                <include>src/**/*.java</include>
+              </includes>
+              <useDefaultExcludes>true</useDefaultExcludes>
+              <useDefaultMapping>true</useDefaultMapping>
+              <properties>
+                <year>2013</year>
+              </properties>
+              <headerDefinitions>
+                <headerDefinition>src/main/javadocHeaders.xml</headerDefinition>
+              </headerDefinitions>
+            </configuration>
           </plugin>
         </plugins>
       </build>
@@ -260,7 +269,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.5</version>
+            <version>1.4</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
@@ -270,6 +279,130 @@
                 </goals>
               </execution>
             </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>release</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <!--
+            To disable debug compilation, debug must be "true" AND
+            debuglevel must be "none".
+            http://jira.codehaus.org/browse/MCOMPILER-114
+        -->
+        <maven.compiler.debug>true</maven.compiler.debug>
+        <maven.compiler.debuglevel>none</maven.compiler.debuglevel>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>debug</id>
+      <properties>
+        <maven.compiler.debug>true</maven.compiler.debug>
+        <maven.compiler.debuglevel>lines,vars,source</maven.compiler.debuglevel>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>analyze</id>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <excludes>
+                <!-- skip performance tests because the analysis tools will throw off
+                the timing checks, causing false-positive test failures -->
+                <exclude>**/*PerfTest.java</exclude>
+                <exclude>**/ReconfigureOnChangeTest.java</exclude>
+                <exclude>**/PackageDataCalculatorTest.java</exclude>
+
+                <!--  Disable fragile network tests to be refactored later -->
+                <exclude>**/net/*.java</exclude>
+              </excludes>
+            </configuration>
+          </plugin>
+
+          <!-- Cobertura (code coverage tool) -->
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.5.1</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>cobertura</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-site-plugin</artifactId>
+            <version>3.3</version>
+            <configuration>
+              <reportPlugins>
+                <!-- Cobertura (code coverage tool) -->
+                <plugin>
+                  <groupId>org.codehaus.mojo</groupId>
+                  <artifactId>cobertura-maven-plugin</artifactId>
+                  <configuration>
+                    <formats>
+                      <format>html</format>
+                      <format>xml</format>
+                    </formats>
+                  </configuration>
+                </plugin>
+
+                <!-- JXR (source code reference generator) -->
+                <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-jxr-plugin</artifactId>
+                  <version>2.3</version>
+                </plugin>
+
+                <!-- FindBugs (static code analysis tool) -->
+                <plugin>
+                  <groupId>org.codehaus.mojo</groupId>
+                  <artifactId>findbugs-maven-plugin</artifactId>
+                  <version>2.5.2</version>
+                  <configuration>
+                    <threshold>Low</threshold>
+                    <effort>Max</effort>
+                  </configuration>
+                </plugin>
+
+                <!-- PMD (static code analysis tool) -->
+                <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-pmd-plugin</artifactId>
+                  <version>2.7.1</version>
+                  <configuration>
+                    <linkXref>true</linkXref>
+                    <sourceEncoding>utf-8</sourceEncoding>
+                    <minimumTokens>100</minimumTokens>
+                    <targetJdk>1.5</targetJdk>
+                  </configuration>
+                </plugin>
+
+                <!-- Checkstyle (code-style analysis tool) -->
+                <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-checkstyle-plugin</artifactId>
+                  <version>2.9.1</version>
+                </plugin>
+
+              </reportPlugins>
+            </configuration>
           </plugin>
         </plugins>
       </build>
