--- a/pom.xml
+++ b/pom.xml
@@ -116,12 +116,6 @@
 
     <dependencies>
 
-
-      <!-- Pool of dependencies available to any sub-module, but not included automatically.
-                They must be explicitly referenced in the children POMs, but _don't_ include
-                version numbers in the child POMs.  Define them here only to guarantee version
-                compatibility across children modules! -->
-
       <!-- Logback Extensions sub-modules dependency .jars (alphabetized based on artifactId for easy scanning please!): -->
       <dependency>
         <groupId>ch.qos.logback</groupId>
@@ -161,6 +155,7 @@
     </pluginManagement>
 
     <plugins>
+      <!-- to perform release, enter: "mvn release:clean release:prepare release:perform" -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
@@ -168,15 +163,13 @@
         <configuration>
           <preparationGoals>clean install</preparationGoals>
           <autoVersionSubmodules>true</autoVersionSubmodules>
-          <useReleaseProfile>false</useReleaseProfile>
-          <!-- <goals>deploy site-deploy</goals> -->
           <goals>deploy</goals>
           <arguments>-Prelease</arguments>
           <mavenExecutorId>forked-path</mavenExecutorId>
         </configuration>
       </plugin>
 
-
+      <!-- to generate javadocs, enter: "mvn javadoc:javadoc" -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
@@ -219,6 +212,7 @@
         <version>2.7</version>
       </plugin>
 
+      <!-- to format license headers, enter: "mvn license:format" -->
       <plugin>
         <groupId>com.mycila</groupId>
         <artifactId>license-maven-plugin</artifactId>
@@ -258,6 +252,9 @@
       </properties>
     </profile>
 
+    <!-- This profile automatically activates with the maven-release plugin
+         to sign the artifacts, which is required for uploading to Maven
+         Central. -->
     <profile>
       <id>release-sign-artifacts</id>
       <activation>
