--- a/pom.xml
+++ b/pom.xml
@@ -259,16 +259,13 @@
     </profile>
 
     <profile>
-      <id>release</id>
-      <properties>
-        <!--
-            To disable debug compilation, debug must be "true" AND
-            debuglevel must be "none".
-            http://jira.codehaus.org/browse/MCOMPILER-114
-        -->
-        <maven.compiler.debug>true</maven.compiler.debug>
-        <maven.compiler.debuglevel>none</maven.compiler.debuglevel>
-      </properties>
+      <id>release-sign-artifacts</id>
+      <activation>
+        <property>
+          <name>performRelease</name>
+          <value>true</value>
+        </property>
+      </activation>
       <build>
         <plugins>
           <plugin>
@@ -287,6 +284,24 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <profile>
+      <id>release</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <!--
+            To disable debug compilation, debug must be "true" AND
+            debuglevel must be "none".
+            http://jira.codehaus.org/browse/MCOMPILER-114
+        -->
+        <maven.compiler.debug>true</maven.compiler.debug>
+        <maven.compiler.debuglevel>none</maven.compiler.debuglevel>
+
+        <maven.compiler.optimize>true</maven.compiler.optimize>
+      </properties>
     </profile>
 
     <profile>
