--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,7 @@
           <version>3.1</version>
           <configuration>
             <encoding>UTF-8</encoding>
+            <showWarnings>true</showWarnings>
           </configuration>
         </plugin>
 
