--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <groupId>org.logback-extensions</groupId>
   <artifactId>logback-ext-parent</artifactId>
   <packaging>pom</packaging>
-  <version>0.1.2</version>
+  <version>0.1.3-SNAPSHOT</version>
 
   <name>Logback Extensions</name>
   <url>https://github.com/qos-ch/logback-extensions/</url>
@@ -50,7 +50,7 @@
     <connection>scm:git:git://github.com/qos-ch/logback-extensions.git</connection>
     <developerConnection>scm:git:git@github.com:qos-ch/logback-extensions.git</developerConnection>
     <url>https://github.com/qos-ch/logback-extensions</url>
-    <tag>v_0.1.2</tag>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>GitHub</system>
