--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.logback-extensions</groupId>
     <artifactId>logback-ext-parent</artifactId>
-    <version>0.1.3</version>
+    <version>0.1.4-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
