--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <logback.version>1.1.1</logback.version>
+    <slf4j.version>1.7.6</slf4j.version>
 
     <!-- JDK properties that can be overridden from the command line
          to build under a different JDKs (continuous integration) -->
