--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -110,6 +110,46 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>2.6</version>
+        <executions>
+          <execution>
+            <id>default</id>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <configuration>
+              <excludes>
+                <exclude>**/README*</exclude>
+                <exclude>**/LICENSE*</exclude>
+                <exclude>**/AUTHORS*</exclude>
+                <exclude>src/test/resources/**</exclude>
+                <exclude>src/main/resources/**</exclude>
+                <exclude>src/test/java/**/MissingConfigurationTest*</exclude>
+              </excludes>
+            </configuration>
+          </execution>
+          <execution>
+            <id>mitre-license</id>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <configuration>
+              <properties>
+                <owner>The MITRE Corporation</owner>
+                <project.inceptionYear>2016</project.inceptionYear>
+                <email>jgibson@mitre.org</email>
+              </properties>
+              <includes>
+                <include>src/test/java/**/MissingConfigurationTest*</include>
+              </includes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
