--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
 
     <logback.version>1.1.1</logback.version>
     <slf4j.version>1.7.6</slf4j.version>
+    <hamcrest.version>1.3</hamcrest.version>
 
     <!-- JDK properties that can be overridden from the command line
          to build under a different JDKs (continuous integration) -->
@@ -114,6 +115,12 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <version>${hamcrest.version}</version>
       <scope>test</scope>
     </dependency>
 
