--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,19 @@
+# `version` is needed by gradle-release-plugin and always matches
+# `VERSION_NAME`. The plugin updates both automatically.
+version=0.1.5-SNAPSHOT
 VERSION_NAME=0.1.5-SNAPSHOT
+
+GROUP=org.logback-extensions
+
+POM_URL=https://github.com/qos-ch/logback-extensions
+POM_SCM_URL=https://github.com/qos-ch/logback-extensions
+POM_SCM_ISSUES_URL=https://github.com/qos-ch/logback-extensions/issues
+POM_SCM_CONNECTION=scm:git@github.com:qos-ch/logback-extensions.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:qos-ch/logback-extensions.git
+POM_LICENCE_NAME="The Apache Software License, Version 2.0"
+POM_LICENCE_ID="Apache-2.0"
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=tony19
+POM_DEVELOPER_NAME=tony19
+POM_DEVELOPER_EMAIL=tony19@gmail.com
