--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+//    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
