--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
   }
   dependencies {
 //    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+    classpath 'org.ajoberstar:grgit:2.1.0'
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
@@ -14,6 +15,8 @@ plugins {
   id 'io.codearte.nexus-staging' version '0.11.0' // must be in root project
   id 'net.researchgate.release' version '2.6.0'
 }
+apply plugin: 'org.ajoberstar.grgit'
+apply from: 'gradle/readme.gradle'
 
 allprojects  {
   apply plugin: 'maven'
@@ -25,7 +28,6 @@ allprojects  {
 subprojects {
   apply plugin: 'java'
   apply from: "${rootProject.rootDir}/gradle/deploy.gradle"
-  apply from: "${rootProject.rootDir}/gradle/readme.gradle"
 
   sourceCompatibility = 1.6
   targetCompatibility = 1.6
