--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ jobs:
       ignore: gh-pages
     working_directory: ~/code
     docker:
-      - image: circleci/android:api-26-alpha
+      - image: circleci/openjdk:8-jdk-browsers
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
