--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ subprojects {
   apply plugin: 'java'
   apply from: "${rootProject.rootDir}/gradle/deploy.gradle"
 
-  sourceCompatibility = 1.6
-  targetCompatibility = 1.6
+  sourceCompatibility = JavaVersion.VERSION_1_8
+  targetCompatibility = JavaVersion.VERSION_1_8
   tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
     // Warn about deprecations
