--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ subprojects {
   dependencies {
     testCompile 'org.mockito:mockito-core:1.9.0'
     testCompile 'junit:junit:4.12'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
   }
 
   task sourcesJar(type: Jar, dependsOn: classes) {
