--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,8 @@
 rootProject.name = 'logback-ext-parent'
 include ':logback-ext-loggly'
 include ':logback-ext-spring'
+include ':logback-ext-graalvm'
 
 project(':logback-ext-loggly').projectDir = "$rootDir/loggly" as File
 project(':logback-ext-spring').projectDir = "$rootDir/spring" as File
+project(':logback-ext-graalvm').projectDir = "$rootDir/graalvm" as File
